--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="uft-8">
     <title>Команда</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
@@ -29,7 +29,7 @@
             <h2>Анна Погорелая</h2>
             <h3>Позиция: Диагональ</h3>
             <h4>Дата Рождения: 31.07.2006</h4>
-            <h3>Рост: 177см</h3>
+            <h3>Рост: 178см</h3>
           </div>
              
           <!-- Ира -->
@@ -156,7 +156,7 @@
       </div>
 
       <footer>
-        <span>© 2021 Стройдизайн. Все права защищены.</span>
+        <span>© 2021 Все права защищены.</span>
         <a href="https://ira-y.github.io/" class="copyright">Разработано Ириной Янковской</a>
       </footer>
     </body>
